app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Font Imports */
@font-face {
  font-family: 'Nt wagner';
  src: url('./assets/font/ntwagner/nt_wagner_only_personal_use-webfont.woff2')
      format('woff2'),
    url('./assets/font/ntwagner/nt_wagner_only_personal_use-webfont.woff')
      format('woff');
}

body {
  @apply bg-[#ffd5c2];
}

input:focus ~ span,
input:not(:placeholder-shown) ~ span {
  @apply transform -translate-y-6;
}

textarea:focus ~ span,
textarea:not(:placeholder-shown) ~ span {
  @apply transform -translate-y-8;
}

/* Text */

.nav-title {
  font-size: clamp(1.2rem, 5vw, 2.3rem);
  line-height: 1;
}

.header-primary {
  font-size: clamp(2rem, 6vw, 9rem);
  line-height: 1;
}

.header-secondary {
  font-size: clamp(3rem, 9vw, 10rem);
  line-height: 1;
}

.large-text {
  font-size: clamp(1.5rem, 4vw, 4.5rem);
  line-height: 1;
}

.footer-header {
  font-size: clamp(2.5rem, 6vw, 6rem);
  line-height: 1;
}

/* Scrollbar & Cursor */
html {
  scrollbar-width: none; /* Firefox */
}
::-webkit-scrollbar {
  width: 0px;
}

.hideCursor {
  cursor: none;
}

.hidescrollbar {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

.hidescrollbar::-webkit-scrollbar {
  width: 0px;
}

.hidescrollbar::-moz-scrollbar {
  width: 0px;
}

/* Fonts  */

.wagner {
  font-family: 'Nt wagner', Frank Ruhl Libre, sans-serif;
  @apply font-bold;
}

/* React-select */

.css-24pjkf-placeholder {
  @apply capitalize;
}

.css-wsp0cs-MultiValueGeneric {
  @apply capitalize;
  @apply bg-white;
}
.css-12a83d4-MultiValueRemove {
  @apply bg-white;
}

.css-12a83d4-MultiValueRemove > svg {
  @apply text-black;
}

.css-1p3m7a8-multiValue {
  @apply bg-white !important;
}

.css-tj5bde-Svg {
  @apply text-white;
}

/* React Time picker */

.react-time-picker__wrapper {
  @apply border-none !important;
}

.react-time-picker__inputGroup__divider,
.react-time-picker__inputGroup__leadingZero {
  display: contents !important;
}

/* media queiry for landscape mode on mobile */

@media only screen and (max-width: 900px) and (orientation: landscape) {
  .navigation {
    padding-top: 5rem;
  }
  .nav-title {
    font-size: 1.3rem;
    line-height: 1;
  }
  .header-primary {
    font-size: clamp(1rem, 4vw, 3rem);
  }

  .cta {
    @apply mt-[5vh];
  }

  .half-circle {
    @apply w-1/2;
  }
  .cone {
    width: 100%;
    height: 100%;
    top: 65%;
  }

  .cone-bg {
    min-width: 20%;
  }
}

/* Media query for Iphone 5 */

@media only screen and (max-width: 320px) {
  .header-primary {
    @apply text-2xl;
  }

  .half-circle {
    @apply h-40;
  }
}

